--- a/views/index.ejs
+++ b/views/index.ejs
@@ -22,6 +22,7 @@
         <input type="password" name="pw" placeholder="비밀번호"><br/>
         <button type="button" onclick="userSignin()">로그인</button>
     </form>
+    <a href="/new">게시글 작성</a>
 </body>
 <script>
     async function userSignUp(){
