프로필 수정, 삭제 로직 수정

--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -20,7 +20,7 @@
         <li>나이: </li>
         <li>성별: <%= user.gender %>
         </li>
-        <li>생년월일: </li>
+        <li>생년월일: <%= user.birth %></li>
     </ul>
 
     <!-- 프로필 사진 표시 -->
