--- a/views/new.ejs
+++ b/views/new.ejs
@@ -20,6 +20,8 @@
         <input type="text" id="category" name="category" placeholder="카테고리를 입력해주세요."><br/>
         <button type="button" onclick="boardCreate()">게시판 만들기</button>
     </form>
+    <button type="button" onclick="boardEdit()">게시판 수정</button>
+    <button type="button" onclick="boardDelete()">게시판 삭제</button>
 </body>
 <script>
      async function boardCreate(){
