--- a/views/postedit.ejs
+++ b/views/postedit.ejs
@@ -16,16 +16,32 @@
         <input type="date" id="eventDate" name="eventDate" placeholder="날짜를 입력해주세요."><br/>
         <label for="category"> 카테고리 : </label>
         <input type="text" id="category" name="category" placeholder="카테고리를 입력해주세요."><br/>
-        <button type="button" onclick="boardCreate()">게시판 만들기</button>
+        <button type="button" onclick="boardEdit()">게시판 수정</button>
     </form>
 
     <script>
 
-        (function(){
+        (async function(){
             
+            async function boardEdit(){
+                const boardForm = document.forms['board-form'];
+                try{
+            const data = {
+                    title:boardForm.title.value,
+                    content:boardForm.content.value,
+                    event_time:boardForm.eventDate.value,
+                    bord_category:boardForm.category.value
+                }
+            const res = await axios({
+                method:"post",
+                url:"/new/edit",
+                data,
+            })
+        } catch(error) {
+            console.log(error);
+        }
+            }
            
-    
-
         })()
 
 
