--- a/views/postedit.ejs
+++ b/views/postedit.ejs
@@ -33,7 +33,7 @@
                     id: 4
                 }
             })
-            if (deleteRes.result) {
+            if (getpostRes.result) {
                 boardForm.title.value = getpostRes.title;
                 boardForm.content.value = getpostRes.content;
                 boardForm.eventDate.value = getpostRes.event_date;
