--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -27,7 +27,7 @@
     <img src="" alt="프로필 사진">
 
     <!-- 프로필 편집 및 삭제 버튼 -->
-    <a href="/프로필-편집">프로필 편집</a>
+    <a href="/profile/edit">프로필 편집</a>
     <a href="/프로필-삭제">프로필 삭제</a>
 
     <!-- 친구 수 표시 -->
