--- a/views/new.ejs
+++ b/views/new.ejs
@@ -7,6 +7,143 @@
     <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
     <title>Document</title>
 </head>
+
+<style>
+
+    .board-detail-modal {
+        width: 65%; height: 650px; 
+        background-color: #eee; display: none;
+        position: fixed; top: 50px; left: 50%;
+        border-radius: 10px; 
+        margin: auto; transform: translate(-50%, 0);
+    }
+    .board-detail-modal > .board-modal-close {
+        position: absolute; top: -30px; right: 2px;
+        width: 16px; height: 16px;
+        cursor: pointer;
+    }
+    .board-detail-modal > .board-modal-close > img {
+        width: 100%; height: 100%;
+    }
+
+    .board-detail-modal > .board-modal-close:hover {
+        animation: rotate 0.5s
+    }
+
+    .board-detail-modal > .bd-image {
+        width: 100%; height: 200px;
+        /* background-color: rgb(1, 1, 61); */
+        background-image: url("https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/test_1280.jpg");
+        background-position: center;
+        background-repeat: no-repeat;
+        background-size: cover;
+        border-top-left-radius: 10px; border-top-right-radius: 10px; 
+    }
+
+
+    .board-detail-modal > .board-detail-contents {
+        width: 96%; height: 450px; margin: auto;
+        margin-top: -30px;
+    }
+
+
+    .board-detail-modal > .board-detail-contents > .bd-info {
+        width: 100%; height: 125px; background-color: #fff;
+        border-radius: 9px; margin-bottom: 20px;
+    }
+
+    .board-detail-modal > .board-detail-contents > .bd-info > .bd-info_category {
+        text-align: center; font-weight: bold; font-size: 1.2em; color: #ccc;
+        line-height: 1.2em; padding: 10px 0;
+    }
+
+    .board-detail-modal > .board-detail-contents > .bd-info > .bd-info_title {
+        width: 90%;  margin: auto;  overflow:hidden; min-height: 35px;
+        vertical-align:top; text-overflow: ellipsis; word-break:break-all;
+        display: block;
+        display: -webkit-box;
+        -webkit-box-orient:vertical;
+        -webkit-line-clamp:2
+        
+    }
+
+    .board-detail-modal > .board-detail-contents >  .bd-sub-content {
+        width: 98%; margin: auto; height: 310px; overflow: auto; overflow-x: hidden;
+        text-align: left;
+    }
+
+    .board-detail-modal > .board-detail-contents >  .bd-sub-content::-webkit-scrollbar {
+        width: 8px;  /* 스크롤바의 너비 */
+    }
+
+    .board-detail-modal > .board-detail-contents >  .bd-sub-content::-webkit-scrollbar-thumb {
+        height: 30%; /* 스크롤바의 길이 */
+        background: #ccc; /* 스크롤바의 색상 */
+        border-radius: 10px;
+    }
+
+    .board-detail-modal > .board-detail-contents >  .bd-sub-content::-webkit-scrollbar-track {
+        background: rgba(33, 122, 244, .1);  /*스크롤바 뒷 배경 색상*/
+    }
+
+    .board-detail-modal > .board-detail-contents >  .bd-sub-content > h3 {
+        color: #333; font-size: 24px; line-height: 1.95;
+    
+    }
+
+    .board-detail-modal > .board-detail-contents > .bd-sub-content > .txt-box {
+        color: #333; font-size: 24px; line-height: 1.95;
+    }
+
+    .board-detail-modal > .board-detail-contents > .bd-sub-content > .txt-box > h6 {
+        margin: 20px 0 0; font-weight: 600;
+        color: #333; font-size: 16px; line-height: 1.75;
+    }
+
+    .board-detail-modal > .board-detail-contents > .bd-sub-content > .txt-box >  p {
+        color: #333; font-weight: 400;
+        word-wrap: break-word; white-space: pre-wrap;
+        font-size: 16px; line-height: 1.75; padding-right: 1em;
+    }
+  
+    @media screen and (max-width:756px) {
+        .board-detail-modal {
+            width: 90%; height: 600px;
+        }
+
+        .board-detail-modal > .board-detail-contents >  .bd-sub-content {
+            height: 260px; 
+        }
+    }
+
+    @keyframes rotate {
+        from {
+            -webkit-transform: rotate(0deg);
+            -o-transform: rotate(0deg);
+            transform: rotate(0deg);
+        }
+
+        to {
+            -webkit-transform: rotate(360deg);
+            -o-transform: rotate(360deg);
+            transform: rotate(360deg);
+        }
+    }
+
+</style>
+
+<script>
+
+    function loadDetailModal () {
+
+        document.getElementById('boardDetailModal').style.display = 'block';
+    }
+
+    function modalCloase () {
+        document.getElementById('boardDetailModal').style.display = 'none';
+    }
+</script>
+
 <body>
     <h1>new 페이지</h1>
     <form name="board-form">
@@ -22,6 +159,40 @@
     </form>
     <button type="button" onclick="boardEdit()">게시판 수정</button>
     <button type="button" onclick="boardDelete()">게시판 삭제</button>
+    <button onclick="loadDetailModal()">모달 불러오기</button>
+    
+    <div class="wrap"> </div>
+    <div class="board-detail-modal" id="boardDetailModal">
+        <div class="board-modal-close" onclick="modalCloase()">
+            <img src= "https://kdt9-justin.s3.ap-northeast-2.amazonaws.com/close.png"
+                alt="close_img"
+            />
+        </div>
+        <div class="bd-image"></div>
+        <div class="board-detail-contents">
+            <div class="bd-info">
+                <div class="bd-info_category"> bord_category</div>
+                <h2 class="bd-info_title">titletitletitletitletitletitletitletitletitletitletitletitletitletitletitletitletitletitletitletitletitletitletitletitletitle</h2>
+            </div>
+            <div id="eventDetailSubInfo" class="bd-sub-content">
+                <div class="txt-box">
+                    <h6>내용</h6>
+                    <p>sdadasdasdasdadasdasdasdadasdasdasdadasdasdasdadasdasdasdadasdasdasdadasdasdasdadasdasdasdadasdasdasdadasdasda</p>
+                </div>
+                <div class="txt-box">
+                    <h6>흥보 시간</h6>
+                    <p>asdasadas</p>
+                </div>
+
+                <div class="txt-box">
+                    <h6>채팅방</h6>
+                    <p><button>입장하기</button><p>
+                </div>
+
+            </div>
+        </div>
+    </div>
+
 </body>
 <script>
         async function boardCreate(){
