--- a/views/new.ejs
+++ b/views/new.ejs
@@ -8,12 +8,14 @@
     <title>Document</title>
     <style>
         body{
-            background-color: rgba(92, 92, 92, 0.595);
+            background-color: rgba(186, 186, 186, 0.595);
         }
         .wrap{
             display: flex;
-            width: 100%;
-            height: 70%;
+            /* width: 100%;
+            height: 70%; */
+            justify-content: space-between;
+            flex-wrap: wrap;
         }
         
         .imgFlex1{
@@ -21,10 +23,10 @@
             justify-content: space-between;
             align-items: center;
             height: 200px;
-            width: 100%;
+            width: 45%;
             background-color: rgb(255, 255, 255);
-            border-radius: 5px;
-            margin-right: 20px;
+            border-radius: 7px;
+            margin-left: 2.5%;
             margin-bottom: 20px;    
         }
         .imgFlex2{
@@ -32,49 +34,37 @@
             justify-content: space-between;
             align-items: center;
             height: 200px;
-            width: 100%;
+            width: 45%;
             background-color: white;
-            border-radius: 5px;
+            border-radius: 7px;
             margin-bottom: 20px;
+            margin-right: 2.5%;
         }
         .roomImg{
             position: relative;
-            /* display: inline-block; */
             height: 150px;
             width: 150px;
             margin: 2%;
             border-radius: 15%;
             background-color: rgb(255, 255, 255);
             border: 5px solid black;
+            
         }
         .boardInfo{
-
             position: relative;
-
             height: 150px;
             width: 70%;
             margin-right: 2%;
 
         }
         .boxBordCategory{
-            height: 20%;
-            
-           
+            height: 20%; 
         }
         .boxTitle{
-        
             height: 45%;
             font-size: 35px;
-            /* margin-top: 10px;
-            margin-bottom: 20px; */
-            /* margin-left: 50px; */
         }
-        /* .boxContent{
-            height: 25%;
-            background-color: rgb(100, 67, 25);
-        } */
         .boxCreateAt{
-
             height: 15%;
         }
         .boxViews{
@@ -85,10 +75,21 @@
 
         @media (max-width : 990px) {
             .wrap{
-                display: block;
-              
+                /* display: block; */
+                /* width: 50%; */
             }
-
+            .imgFlex1{
+                display: flex;
+                width: 100%;
+                margin-right: 0px;
+                margin-left: 0px;
+            }
+            .imgFlex2{
+                display: flex;
+                width: 100%;
+                margin-right: 0px;
+                margin-left: 0px;
+            }
             .boardInfo{
                 width: 75%;
             }
@@ -97,6 +98,7 @@
             .wrap{
                 display: block;
                 position: absolute;
+                width: 100%;
                 max-width: 100%;
             }
 
@@ -323,7 +325,8 @@
                 
                 for(let i=0; i<res.data.board.length; i++){
                     const date = res.data.board[i].createdAt.split('T')[0];
-                    boxhtml += `
+                    if(i%2==0){
+                        boxhtml += `
                     <div class="imgFlex1">
                         <div class="roomImg"></div>
                         <div class="boardInfo">
@@ -333,7 +336,21 @@
                             <div class="boxViews">${res.data.board[i].views}</div>      
                         </div>
                     </div>
-                    `;   
+                    `;  
+                    }else{
+                        boxhtml += `
+                    <div class="imgFlex2">
+                        <div class="roomImg"></div>
+                        <div class="boardInfo">
+                            <div class="boxBordCategory">${res.data.board[i].bord_category}</div>
+                            <div class="boxTitle">${res.data.board[i].title}</div>
+                            <div class="boxCreateAt">${date}</div>
+                            <div class="boxViews">${res.data.board[i].views}</div>      
+                        </div>
+                    </div>
+                    `;  
+                    }
+ 
                 }
 
                 wrap.innerHTML += boxhtml;
