--- a/views/new.ejs
+++ b/views/new.ejs
@@ -248,8 +248,6 @@
         <input type="text" id="category" name="category" placeholder="카테고리를 입력해주세요."><br/>
         <button type="button" onclick="boardCreate()">게시판 만들기</button>
     </form>
-    <button type="button" onclick="boardEdit()">게시판 수정</button>
-    <button type="button" onclick="boardDelete()">게시판 삭제</button>
 </body>
 <br/>
 <br/>
@@ -269,46 +267,49 @@
                     id: 5
                 }
             })
-            console.log("@@",res.data.result)
            
             if(res.data.result){
                 const wrap = document.querySelector("#wrap");
-
                 let boxhtml = ``;
-                
-                for (let i=0; i<res.data.board.length; i++){
-                    const date = res.data.board[i].createdAt.split('T')[0];
+                for (let i=0; i<res.data.board.length; i++) {
+
                     list.push(res.data.board[i]);
-                    if(i%2==0){
+                    const data = {
+                        bord_category : res.data.board[i] && res.data.board[i].bord_category ? res.data.board[i].bord_category : '',
+                        title :  res.data.board[i] && res.data.board[i].title ? res.data.board[i].title : '',
+                        views : res.data.board[i] && res.data.board[i].views ? res.data.board[i].views : 0,
+                        createAt : res.data.board[i] && res.data.board[i].createdAt.split('T')[0]? res.data.board[i].createdAt.split('T')[0] : '',
+                    }
+
+                    if( i % 2==0 ){
                         boxhtml += `
                     <div class="imgFlex1" onclick="loadDetailModal(${i})">
                         <div class="roomImg"></div>
                         <div class="boardInfo">
-                            <div class="boxBordCategory">${res.data.board[i].bord_category}</div>
-                            <div class="boxTitle">${res.data.board[i].title}</div>
-                            <div class="boxCreateAt">${date}</div>
-                            <div class="boxViews">${res.data.board[i].views}</div>      
+                            <div class="boxBordCategory">${data.bord_category}</div>
+                            <div class="boxTitle">${data.title }</div>
+                            <div class="boxCreateAt">${data.createAt}</div>
+                            <div class="boxViews">${data.views}</div>      
                         </div>
                     </div>
                     `;  
-                    }else{
+                    } else{
                         boxhtml += `
                     <div class="imgFlex2" onclick="loadDetailModal(${i})">
                         <div class="roomImg"></div>
                         <div class="boardInfo">
-                            <div class="boxBordCategory">${res.data.board[i].bord_category}</div>
-                            <div class="boxTitle">${res.data.board[i].title}</div>
-                            <div class="boxCreateAt">${date}</div>
-                            <div class="boxViews">${res.data.board[i].views}</div>      
+                            <div class="boxBordCategory">${data.bord_category}</div>
+                            <div class="boxTitle">${data.title }</div>
+                            <div class="boxCreateAt">${data.createAt}</div>
+                            <div class="boxViews">${data.views}</div>        
                         </div>
                     </div>
                     `;  
                     }
- 
                 }
-
                 wrap.innerHTML += boxhtml;
-                console.log("boxhtml",boxhtml);
+            } else {
+                console.log('res', res);
             }
         })()    
         
@@ -331,9 +332,16 @@
                     url:"/new/post",
                     data,
                 })
-                console.log("result",res.result);
+                if ( res.data.result ) {
+                    
+                    alert('등록 되었습니다.');
+                    window.location.href = "/";
+                } else {
+                    alert('다시 시도해 주세요.')
+                }
+       
             } catch (error) {
-                console.log(error);
+                alert('잠시 후에 시도 해주세요.');
             }
         }
 
@@ -341,8 +349,17 @@
     function loadDetailModal (i) {
         console.log('list', list);
         console.log('i', i);
-        let modal = document.getElementById('boardDetailModal');
 
+        const data = {
+            bord_category : list[i] && list[i].bord_category ? list[i].bord_category : '',
+            content: list[i] && list[i].content ? list[i].content : '',
+            title :  list[i] && list[i].title ? list[i].title : '',
+            views : list[i] && list[i].views ? list[i].views : 0,
+            event_time : list[i] && list[i].event_time.split('T')[0]? list[i].event_time.split('T')[0] : '',
+        }
+
+        
+        let modal = document.getElementById('boardDetailModal');
         modal.style.display = 'block'
         modal.innerHTML = `
             <div class="board-modal-close" onclick="modalCloase()">
@@ -353,17 +370,17 @@
             <div class="bd-image"></div>
             <div class="board-detail-contents">
                 <div class="bd-info">
-                    <div class="bd-info_category"> ${list[i].bord_category}</div>
-                    <h2 class="bd-info_title">${list[i].title}</h2>
+                    <div class="bd-info_category"> ${data.bord_category}</div>
+                    <h2 class="bd-info_title">${data.title}</h2>
                 </div>
                 <div id="eventDetailSubInfo" class="bd-sub-content">
                     <div class="txt-box">
                         <h6>내용</h6>
-                        <p>${list[i].content}</p>
+                        <p>${data.content}</p>
                     </div>
                     <div class="txt-box">
                         <h6>흥보 시간</h6>
-                        <p>${list[i].event_time}</p>
+                        <p>${data.event_time}</p>
                     </div>
 
                     <div class="txt-box">
